tests/suite/snapshots/suite__check__tests__check__bad_unbound_class_8.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_unbound_class_8.xi:2:12]
   │
 2 │     foo(a: A) {}
   ·            ┬  
   ·            ╰── Unbound class A
───╯

