tests/suite/snapshots/suite__check__tests__check__global5.xi.snap
---
source: tests/suite/check.rs
assertion_line: 20
expression: Snapshot(context)
---
Valid Xi Program
